--- a/models/sam2/sample3_test.yml
+++ b/models/sam2/sample3_test.yml
@@ -2,8 +2,10 @@ version: 2
 
 models:
     - name: sample3
+      description: Currency check
       columns:
         - name: currency
+          description: "{{ doc('order_status') }}"
           tests: 
            - accepted_values:
                 values:
