rectified the error

--- a/models/sam2/sample3_test.yml
+++ b/models/sam2/sample3_test.yml
@@ -9,5 +9,5 @@ models:
           tests: 
            - accepted_values:
                 values:
-                    - IN
+                    - INR
              
